--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
-# Byte-compiled / optimized / DLL files
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
 
 # SQLite
 *.db
+
+# Ruby
+.bundle
+vendor
+
+# Temp
+/tmp
